--- a/.github/workflows/JsonNumberBuild.yml
+++ b/.github/workflows/JsonNumberBuild.yml
@@ -1,44 +1,34 @@
 name: JSON Number
-
 on:
-  workflow_dispatch: # 允许手动触发构建
+  workflow_dispatch: # 支持手动运行
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - name: 检出代码
-      uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-    - name: 设置 Python
-      uses: actions/setup-python@v5
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.9'
 
-    - name: 安装依赖
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
 
-    - name: 使用 PyInstaller 打包
+    - name: Build EXE with PyInstaller
       run: |
-        # --onefile: 打包成单个exe
-        # --name: 指定生成的文件名
-        # --console: 保留控制台窗口（因为程序里有print和input）
-        # 如果不需要看到控制台，可以将 --console 改为 --noconsole
-        pyinstaller --onefile --name "json_number" json_number.py
+        # --onefile 打包成单个exe
+        # --console 显示控制台(满足要求4)
+        # --name 指定输出文件名
+        pyinstaller --onefile --console --name "照片抽取与统计" json_number.py
 
-    - name: 上传构建结果 (Artifact)
-      uses: actions/upload-artifact@v4
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
       with:
-        name: json_number_exe
-        path: dist/json_number.exe
-
-    - name: 创建 Release (可选)
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: dist/json_number.exe
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        name: LabelmeChecker-Executable
+        path: dist/照片抽取与统计.exe
